# plonky2-tree-hacks

./: Cargo.toml  README.md
benches/: delta_merkle_gadget.rs
src/: lib.rs  main.rs
src/common/: generic.rs  mod.rs  richer_field.rs  whashout.rs
src/common/base_types/hash/: hash192.rs  hash256.rs  mod.rs
src/common/binaryhelpers/: bytes.rs
src/common/builder/: connect.rs  mod.rs  select.rs
src/common/builder/hash/: blake3.rs  blake3_truncated.rs  core.rs  hash192.rs  hash256.rs  mod.rs  sha256.rs  sha256_truncated.rs
src/common/hash/: cached_zero_hashes.rs  mod.rs
src/common/hash/hashstack/gadgets/: hashstack.rs
src/common/hash/merkle/gadgets/: blake3.rs  delta_merkle_proof.rs  merkle_proof.rs  mod.rs
src/common/hash/merkle/gadgets/generic/: delta_merkle_proof.rs  merkle_proof.rs
src/common/hash/merkle/gadgets/sha256/: delta_merkle_proof.rs  merkle_proof.rs
src/common/hash/merkle/gadgets/sha256_truncated/: delta_merkle_proof.rs  merkle_proof.rs
src/common/hash/merkle/helpers/: merkle_proof.rs  zero_hashes.rs
src/common/hash/poseidon/: hash.rs
src/common/hash/traits/: hasher.rs
src/common/u32/: witness.rs
src/common/u32/gadgets/: arithmetic_u32.rs  binary_u32.rs  interleaved_u32.rs
src/common/u32/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  interleave_u32.rs  range_check_u32.rs  subtraction_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
src/common/verify/: fingerprint.rs
src/debug/: debug_timer.rs  mod.rs
src/utils/: mod.rs
src/utils/zmt/: mod.rs  zero_merkle_tree.rs
src/utils/zmt/node_store/: core.rs  mod.rs  simple_node_store.rs
