[package]
name = "plonky2-tree-hacks"
version = "0.1.0"
edition = "2021"



[dependencies]
plonky2 = { git = "https://github.com/mir-protocol/plonky2", rev = "3de92d9ed1721cec133e4e1e1b3ec7facb756ccf", default-features = false, features = ["std"] }
plonky2_util = { git = "https://github.com/mir-protocol/plonky2", rev = "3de92d9ed1721cec133e4e1e1b3ec7facb756ccf", default-features = false }
plonky2_ecdsa = { git = "https://github.com/cf/plonky2-ecdsa", rev = "1fd71d5f5deec382ac192f4ce28764996f8e6085", default-features = false  }
bitflags = "2.0.0-rc.1"
rand = "0.8"
hex = "0.4.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_with = { version = "2.2.0", features = ["hex"] }
ahash = { version = "0.8.3", default-features = false, features = ["compile-time-rng"] } # NOTE: Be sure to keep this version the same as the dependency in `hashbrown`.
anyhow = { version = "1.0.40", default-features = false }
hashbrown = { version = "0.14.0", default-features = false, features = ["ahash", "serde"] } # NOTE: When upgrading, see `ahash` dependency.
log = "0.4.17"
base64 = "0.13.0"
serde_json = "1.0.86"
itertools = "0.10.5"
num = { version = "0.4", features = [ "rand" ] }
clap = { version = "4.0.32", features = ["derive"] }
bincode = "1.3.3"
serde_repr = "0.1.10"
concurrent-queue = "2.1.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
unroll = "0.1.5"

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"

[[bench]]
name = "delta_merkle_gadget"
harness = false


[features]
default = ["std"]
std = ["anyhow/std", "rand/std"]

[profile.release]
opt-level = 3
debug = true


[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
